include/dashboardcb.css
/* Colors */
:root {
	--x-main-bg: #f3f2f2;
	--x-main-bg-dark: #222C3C;
	--x-main-txt: #080707;
	--x-main-txt-dark: #F8F8FB;
	--bg-white: #ffffff;
	--light-grey: #dddddd;
}
/*
	Removing image background
	Using a background color instead
*/
html {
	background: var(--x-main-bg);
}

/*	
	Container class
	Borrowed from Bootstrap 4 
*/
.container,
.container-fluid,
.container-xxl,
.container-xl,
.container-lg,
.container-md,
.container-sm {
	width: 100%;
	padding-right: var(--bs-gutter-x, 0.75rem);
	padding-left: var(--bs-gutter-x, 0.75rem);
	margin-right: auto;
	margin-left: auto;
}

@media (min-width: 576px) {
.container-sm, .container {
	max-width: 540px;
}
}
@media (min-width: 768px) {
.container-md, .container-sm, .container {
	max-width: 720px;
}
}
@media (min-width: 992px) {
.container-lg, .container-md, .container-sm, .container {
	max-width: 960px;
}
}
@media (min-width: 1200px) {
.container-xl, .container-lg, .container-md, .container-sm, .container {
	max-width: 1140px;
}
}
@media (min-width: 1400px) {
.container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
	max-width: 1320px;
}
}

/* Dashboard container*/
.dash-bg-white {
	background: var(--bg-white);
}

/* Shadow */
.dash-decor-1 {
	box-shadow: 0 0px 21.4px -15px rgba(0, 0, 0, 0.06), 0 0px 40px -15px rgba(0, 0, 0, 0.12);
	border: 1px solid var(--light-grey);
	border-radius: .5rem;
}

/* Grid Widget*/
.gridclose_icon {
	display: none;
}

.gridoptions_icon, .gridclose_icon, .expand_gridoptions {
	transition: all 0.2s ease-in-out;
	animation-name: closepop;
	animation-duration: 0.3s;
	animation-timing-function: easeout;
}

.grid-stack-item-content:hover .gridclose_icon {
	display: block;
}

@keyframes closepop {
	0% {
		transform: scale(0.2);
	}
	75% {
		transform: scale(1.2);
		animation-timing-function: easeout;
	}
	100% {
		transform: scale(1);
	}
}

.homeactions_items {
	display: none;
	z-index: 9999;
}

.homeactions:hover .homeactions_items {
	display: block;
}

.homeactions_items:hover {
	display: block;
}

.expand_gridoptions {
	display: none;
}

